syntax = "proto3";
option go_package = "./;proto";

package go.micro.service.imooc;

service Cap {
    rpc SayHello(SayHelloRequest) returns (SayHelloResponse);
}

message SayHelloRequest {
    string  message = 1;
}

message SayHelloResponse {
    string  answer = 1;
}

//protoc -I ./ --go_out=./ --micro_out=./ ./imooc.proto